Fixed Who's Online Spacing
There was additional spacing at the end of the block, and found it was
due to the !important being at width of 150, when should have been auto.

--- a/themes/default/css/portal.css
+++ b/themes/default/css/portal.css
@@ -79,7 +79,7 @@ hr {
 
 .sp_online_flow {
 	max-height: 150px;
-	height: 150px !important;;
+	height: auto !important;;
 	overflow: auto;
 }
 .sp_rss_flow {
